--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="primary">#576276</color>
+    <color name="primary_dark">#272745</color>
+    <color name="primary_light">#D1C4E9</color>
+    <color name="accent">#313C4D</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="red">#990000</color>
+    <color name="light_gray">#DDDDDD</color>
+    <color name="gray">#888888</color>
+    <color name="translucent_white">#88ffffff</color>
+    <color name="light_green">#7accc4</color>
+    <color name="green">#2e7d32</color>
+    <color name="background">#EEEEEE</color>
+    <color name="transparent">#00000000</color>
+    <color name="colorBackground">#dad9cc</color>
+    <color name="headerColor">#414F65</color>
+    <color name="itemColor">#313C4D</color>
 </resources>
