--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardBackgroundColor="#313C4D"
     app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,12 +11,44 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/img"
             android:layout_width="95dp"
             android:layout_height="95dp"
             android:padding="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@mipmap/ic_launcher"/>
+
+        <TextView
+            android:id="@+id/tvMovieName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:lines="2"
+            android:gravity="center"
+            android:maxLines="2"
+            android:textColor="@color/primary_text"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/img"
+            app:layout_constraintEnd_toStartOf="@+id/movieRating"
+            app:layout_constraintStart_toEndOf="@id/img"
+            app:layout_constraintTop_toTopOf="@+id/img"
+            tools:text="Movie Name" />
+
+        <TextView
+            android:id="@+id/movieRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieName"
+            android:layout_marginTop="10dp"
+            android:drawableEnd="@drawable/ic_star_black_24dp"
+            android:gravity="end|center"
+            tools:text="1"
+            android:textSize="16sp"
+            android:textColor="@color/secondary_text"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
