--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -46,6 +46,19 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/noData"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="no-data.json"
+        app:lottie_loop="false"
+        app:lottie_speed="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcMovies"
         android:layout_width="match_parent"
