--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:padding="12dp"
         android:textColor="@color/primary_text"
-        android:textSize="14sp"
+        android:gravity="center"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
