--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -54,6 +54,7 @@
         app:lottie_fileName="no-data.json"
         app:lottie_loop="false"
         app:lottie_speed="1"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
